--- a/music-app/music/package.json
+++ b/music-app/music/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "pinia": "^2.0.23",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
