--- a/music-app/music/package.json
+++ b/music-app/music/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.7.3",
     "autoprefixer": "^10.4.13",
+    "firebase": "^8.10.1",
     "pinia": "^2.0.23",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
   },
