--- a/music-app/music/package.json
+++ b/music-app/music/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.2.4",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.41",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
