--- a/music-app/music/package.json
+++ b/music-app/music/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.13",
     "firebase": "^8.10.1",
     "howler": "^2.2.3",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
