--- a/music-app/music/package.json
+++ b/music-app/music/package.json
@@ -17,6 +17,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
     "postcss": "^8.4.19",
+    "rollup-plugin-visualizer": "^5.9.0",
     "tailwindcss": "^3.2.4",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.41",
