--- a/music-app/music/package.json
+++ b/music-app/music/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/",
+    "test:unit": "vitest --environment jsdom --ui",
     "test:e2e": "playwright test",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
@@ -28,6 +28,7 @@
     "@playwright/test": "^1.27.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.1.2",
+    "@vitest/ui": "^0.29.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^2.1.0",
     "eslint": "^8.22.0",
